# object-oriented-programming

./: .gitignore  LICENSE  pyproject.toml  setup.cfg  setup.py
data/: gitnames.csv  students.csv  submissions.csv
doc/: Makefile  README.md
doc/source/: 0_introduction.rst  0_preface.rst  10_further_object-oriented_features.rst  10_trees_and_directed_acyclic_graphs.rst  11_assessment.rst  11_further_object-oriented_features.rst  1_introduction.rst  1_objects.rst  1_programs_in_files.rst  2_objects.rst  2_programs_in_files.rst  2_style.rst  3_exceptions.rst  3_objects.rst  3_style.rst  42_advanced_python_scripting.rst  4_abstract_data_types.rst  4_exceptions.rst  4_style.rst  5_abstract_data_types.rst  5_exceptions.rst  6_exceptions.rst  6_inheritance.rst  7_debugging.rst  7_inheritance.rst  7_midterm.rst  8_debugging.rst  8_inheritance.rst  8_trees_and_directed_acyclic_graphs.rst  9_debugging.rst  9_trees_and_directed_acyclic_graphs.rst  a1_help.rst  a2_git.rst  conf.py  cover_text  euclid.rst  example_code.rst  exercises.rst  (+13 more)
example_code/: addable.py  euclid.py  expression_tools.py  graphs.py  groups.py  groups_abc.py  groups_basic.py  linked_list.py  polynomial.py  shapes.py  simple_classes.py  square.py  try_except.py
fibonacci/: __init__.py  fibonacci.py  typesafe_fibonacci.py
scripts/: oo_convert_classroom  oo_doc_dependencies  oo_exercise_marks  oo_generate_wk9_data  oo_repo_tool  oo_test_report  run_fibonacci.py
src/: linked_list.py  polynomial.py  syntax_error.py
tests/: test_fibonacci.py  test_fibonacci_parametrised.py  test_linked_list.py  test_numpoly.py  test_pandas_fail.py
(+6 files in other folders)
